# iptux

./: .clang-format  .editorconfig  .gitattributes  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.cvs  Makefile.in  NEWS  NEWS.md  README  README.md  TODO  acconfig.h  aclocal.m4  codecov.yml  config  config.guess  config.h.in  configure  configure.ac  configure.in  docker_build.sh  io.github.iptux_src.iptux.yml  meson.build  meson_options.txt  protocol  style  summary  summary.idx
.github/: copilot-instructions.md
.github/workflows/: ci.yml  codeql.yml  flatpak-snapshot.yml  windows.yml
CMakeModules/: CodeCoverage.cmake
autom4te.cache/: output.1  requests  traces.0  traces.1
desktop/: CMakeLists.txt  Makefile.am  Makefile.in  iptux.desktop  meson.build
examples/: meson.build
examples/count-bot/: main.cpp  meson.build
homebrew/: iptux.rb
pixmaps/: CMakeLists.txt  CMakelists.txt  Makefile.am  Makefile.in  meson.build
po/: CMakeLists.txt  LINGUAS  Makefile.in  Makefile.in.in  POTFILES  POTFILES.in  cs.po  de.gmo  de.po  en_GB.gmo  en_GB.po  es.gmo  es.po  fr.po  gl.po  iptux.pot  it.po  lb.po  meson.build  nb_NO.po  pl.gmo  pl.po  pt.po  pt_BR.po  ru.po  ta.po  ua.po  uk.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
refs/heads/app/io.github.iptux_src.iptux/x86_64/: master
scripts/: Makefile  build_in_docker_ubuntu1604.sh  build_in_docker_ubuntu1804.sh  iptux-travis-gcc.Dockerfile  meson.build  package-windows-portable.sh  update-po.sh
scripts/flatpak/: io.github.iptux_src.iptux.snapshot.yml  io.github.iptux_src.iptux.yml
share/: meson.build
share/applications/: io.github.iptux_src.iptux.desktop.in  meson.build
share/iptux/css/: iptux.css
share/iptux/ui/: main.ui
share/metainfo/: io.github.iptux_src.iptux.metainfo.xml  meson.build
share/ui/: main.ui  ui.xml
snap/: snapcraft.yaml
sound/: CMakeLists.txt  Makefile.am  Makefile.in  meson.build
src/: AboutIptux.cpp  AboutIptux.h  AnalogFS.cpp  AnalogFS.h  CMakeLists.txt  Command.cpp  Command.h  Control.cpp  Control.h  CoreThread.cpp  CoreThread.h  DataSettings.cpp  DataSettings.h  DetectPal.cpp  DetectPal.h  DialogBase.cpp  DialogBase.h  DialogGroup.cpp  DialogGroup.h  DialogPeer.cpp  DialogPeer.h  HelpDialog.cpp  HelpDialog.h  IptuxConfig.cpp  IptuxConfig.h  IptuxSetting.cpp  IptuxSetting.h  Log.cpp  Log.h  LogSystem.cpp  LogSystem.h  MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  Pal.cpp  Pal.h  ProgramData.cpp  ProgramData.h  RecvFile.cpp  (+57 more)
src/api/: meson.build
src/api/iptux-core/: CoreThread.h  Event.h  Exception.h  IptuxConfig.h  Models.h  ProgramData.h  StatusIconMode.h  TransFileModel.h  meson.build
src/ccore/: meson.build  models.h
src/googletest-download/: CMakeLists.txt.in
src/gtkmm3/: MainWindow.h  iptux-gtkmm3.cpp  meson.build
src/gtkmm4/: Iptux.cpp  Iptux.h  MainWindow.cpp  MainWindow.h  UiHelper.cpp  UiHelper.h  UiHelperTest.cpp  iptux-gtkmm4.cpp  meson.build
src/gtkmm4/resources/: iptux.gresource.xml
src/gtkmm4/resources/gtk/: AboutDialog.ui  menus.ui
src/iptux/: AboutDialog.cpp  AboutDialog.h  AboutDialogTest.cpp  AnalogFS.cpp  AnalogFS.h  AppIndicator.cpp  AppIndicator.h  AppIndicatorDummy.cpp  AppIndicatorGlib.cpp  AppIndicatorGtk3.cpp  AppIndicatorMac.mm  Application.cpp  Application.h  ApplicationTest.cpp  CMakeLists.txt  Command.cpp  Command.h  CommandMode.cpp  CommandMode.h  CommandModeTest.cpp  CoreThread.cpp  CoreThread.h  CoreThreadTest.cpp  Darwin.cpp  Darwin.h  DataSettings.cpp  DataSettings.h  DataSettingsTest.cpp  DetectPal.cpp  DetectPal.h  DetectPalTest.cpp  DialogBase.cpp  DialogBase.h  DialogGroup.cpp  DialogGroup.h  DialogGroupTest.cpp  DialogPeer.cpp  DialogPeer.h  DialogPeerTest.cpp  Event.cpp  (+109 more)
src/iptux-core/: Command.cpp  Command.h  CommandMode.cpp  Const.h  CoreThread.cpp  CoreThread.h  CoreThreadTest.cpp  Event.cpp  Event.h  Exception.cpp  Exception.h  IptuxConfig.cpp  IptuxConfigTest.cpp  Models.cpp  Models.h  ModelsTest.cpp  ProgramData.cpp  ProgramData.h  ProgramDataTest.cpp  RecvFile.cpp  RecvFileData.cpp  RecvFileData.h  SendFile.cpp  SendFile.h  SendFileData.cpp  SendFileData.h  TcpData.cpp  TcpData.h  TestHelper.cpp  TestHelper.h  TestMain.cpp  TransAbstract.cpp  TransAbstract.h  TransFileModel.cpp  TransFileModel.h  UdpData.cpp  UdpData.h  UdpDataTest.cpp  UtilsTest.cpp  deplib.h  (+8 more)
src/iptux-core/internal/: AnalogFS.cpp  AnalogFS.h  Command.cpp  Command.h  CommandMode.cpp  CommandMode.h  CommandModeTest.cpp  CommandTest.cpp  ConnectService.h  Encrypt.h  EncryptGnutls.cpp  EncryptTest.cpp  Ipv4ConnectService.cpp  Ipv4ConnectService.h  RecvFile.cpp  RecvFile.h  RecvFileData.cpp  RecvFileData.h  SendFile.cpp  SendFile.h  SendFileData.cpp  SendFileData.h  TcpData.cpp  TcpData.h  TransAbstract.cpp  TransAbstract.h  UdpData.cpp  UdpData.h  UdpDataService.cpp  UdpDataService.h  UdpDataServiceTest.cpp  UdpDataTest.cpp  UdpServer.cpp  UdpServer.h  UdpServerTest.cpp  ipmsg.h  iptux_error.h  iptux_network.h  support.cpp  support.h  (+1 more)
src/iptux-utils/: Exception.cpp  Exception.h  TestHelper.cpp  TestHelper.h  UtilsTest.cpp  meson.build  output.cpp  output.h  utils.cpp  utils.h
src/iptux/resources/: iptux.gresource.xml
src/iptux/resources/gtk/: AppIndicator.ui  DataSettings.ui  DetectPal.ui  DialogPeer.ui  HeaderBar.ui  MainWindow.ui  main.ui  menus.ui
src/main/: CMakeLists.txt  iptux.cpp  iptux_crash_utils.cpp  iptux_crash_utils.h  meson.build  windows.rc
src/uninstall/: Makefile.am  Makefile.in  ihateiptux.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  sampletest.cpp
test/googletest-download/: CMakeLists.txt.in
ui/: ui.xml
