option(
  'mode',
  type: 'combo',
  choices: ['standard', 'dev', 'portable'],
  description: 'package mode',
)

option(
  'static-link',
  type: 'boolean',
  value: false,
  description: 'static link libiptux-core',
)

option(
  'appindicator',
  type: 'feature',
  value: 'auto',
  description: 'enable app indicator support',
)
