desktop = iptux.desktop
logo_64 = hicolor/64x64/apps/ip-tux.png hicolor/64x64/apps/i-tux.png
logo_48 = hicolor/48x48/apps/ip-tux.png hicolor/48x48/apps/i-tux.png
logo_32 = hicolor/32x32/apps/ip-tux.png hicolor/32x32/apps/i-tux.png
logo_24 = hicolor/24x24/apps/ip-tux.png hicolor/24x24/apps/i-tux.png
logo_22 = hicolor/22x22/apps/ip-tux.png hicolor/22x22/apps/i-tux.png
logo_16 = hicolor/16x16/apps/ip-tux.png hicolor/16x16/apps/i-tux.png
logo = $(logo_64) $(logo_48) $(logo_32) $(logo_24) $(logo_22) $(logo_16)
EXTRA_DIST = $(desktop) $(logo)

desktopdir = @desktopdir@
desktop_DATA = $(desktop)
logodir = @logodir@
nobase_dist_logo_DATA = $(logo)