icon = Blowfish.png Bug.png Cow.png Daemon.png Dog.png Elephant.png Frog.png \
	Ghost.png Konqui.png Lion.png Monkey.png Penguin.png Pig.png qq.png \
	Rabbit.png Scream.png Teddybear.png Turtle.png tux.png
tip = error.png finish.png hide.png  recv.png send.png show.png
menu = board.png detect.png group.png share.png
EXTRA_DIST = $(tip) $(icon) $(menu)

icondir = @icondir@
icon_DATA = $(icon)
tipdir = @tipdir@
tip_DATA = $(tip)
menudir = @menudir@
menu_DATA = $(menu)
