icon = icon-blowfish.png icon-bug.png icon-cow.png icon-daemon.png \
       icon-dog.png icon-elephant.png icon-frog.png icon-ghost.png \
       icon-konqui.png icon-lion.png icon-monkey.png icon-penguin.png \
       icon-pig.png icon-qq.png icon-rabbit.png icon-scream.png \
       icon-teddybear.png icon-turtle.png icon-tux.png
tip = tip-error.png tip-finish.png tip-hide.png  tip-recv.png tip-send.png tip-show.png
menu = menu-board.png menu-detect.png menu-group.png menu-share.png
EXTRA_DIST = $(tip) $(icon) $(menu)

icondir = @icondir@
icon_DATA = $(icon)
tipdir = @tipdir@
tip_DATA = $(tip)
menudir = @menudir@
menu_DATA = $(menu)
