icon = icon/icon-blowfish.png icon/icon-bug.png icon/icon-cow.png icon/icon-daemon.png \
       icon/icon-dog.png icon/icon-elephant.png icon/icon-frog.png icon/icon-ghost.png \
       icon/icon-konqui.png icon/icon-lion.png icon/icon-monkey.png icon/icon-penguin.png \
       icon/icon-pig.png icon/icon-qq.png icon/icon-rabbit.png icon/icon-scream.png \
       icon/icon-teddybear.png icon/icon-turtle.png icon/icon-tux.png
tip = tip/tip-error.png tip/tip-finish.png tip/tip-hide.png tip/tip-recv.png tip/tip-send.png \
     tip/tip-show.png
menu = menu/menu-board.png menu/menu-detect.png menu/menu-group.png \
        menu/menu-share.png
pixmaps = $(tip) $(icon) $(menu)
EXTRA_DIST = $(pixmaps)

pixmapsdir = @pixmapsdir@
nobase_dist_pixmaps_DATA = $(pixmaps)
