i18n = import('i18n')
i18n.merge_file('io.github.iptux_src.iptux.desktop',
    type: 'desktop',
    output: 'io.github.iptux_src.iptux.desktop',
    input: 'io.github.iptux_src.iptux.desktop.in',
    po_dir: join_paths(meson.source_root(), 'po'),
    install: true,
    install_dir: 'share/applications'
)
